--- a/1.md
+++ b/1.md
@@ -1242,3 +1242,6 @@ Line 1
     Line 2 with spaces
 Line 3
 </pre>
+<pre>
+	Pre Test for Paragraph. Copy <inject key="AzureAdUserPassword" style="color: Red"></inject>
+</pre>
