--- a/1.md
+++ b/1.md
@@ -1235,13 +1235,9 @@ Long text without breaks Long text without breaks Long text without breaksLong t
 
 # 10 Jan 2026-SM pre tag
 <pre>
-Hello New Year 2026
-</pre>
-<pre>
-Line 1
-    Line 2 with spaces
-Line 3
-</pre>
-<pre>
-	Pre Test for Paragraph. Copy <inject key="AzureAdUserPassword" style="color: Red"></inject>
+===============================
+1: BASIC PRE TEST
+===============================
+Hello World
+Line breaks and spaces preserved.
 </pre>
