--- a/1.md
+++ b/1.md
@@ -1241,3 +1241,11 @@ Long text without breaks Long text without breaks Long text without breaksLong t
 Hello World
 Line breaks and spaces preserved.
 </pre>
+<pre>
+===============================
+2: SPACES
+===============================
+Line 1
+    Line 2 with 4 spaces
+	Line 3 with a tab
+</pre>
