--- a/1.md
+++ b/1.md
@@ -1236,16 +1236,12 @@ Long text without breaks Long text without breaks Long text without breaksLong t
 # 10 Jan 2026-SM pre tag
 <pre>
 ===============================
-1: BASIC PRE TEST
+3: MULTIPLE LINE BREAKS
 ===============================
-Hello World
-Line breaks and spaces preserved.
-</pre>
-<pre>
-===============================
-2: SPACES
-===============================
-Line 1
-    Line 2 with 4 spaces
-	Line 3 with a tab
+Line1
+
+Line2
+
+
+Line3
 </pre>
