--- a/1.md
+++ b/1.md
@@ -1234,14 +1234,9 @@ Long text without breaks Long text without breaks Long text without breaksLong t
 <p>11.Invalid pre tag without closing tag</p>
 
 # 10 Jan 2026-SM pre tag
-<pre>
+<pre class="wrap">
 ===============================
-3: MULTIPLE LINE BREAKS
+6: LONG LINE TEST
 ===============================
-Line1
-
-Line2
-
-
-Line3
+ThisIsAnExtremelyLongLineWithoutAnySpacesToTestHorizontalScrollBehavior1234567890
 </pre>
