--- a/1.md
+++ b/1.md
@@ -1236,7 +1236,7 @@ Long text without breaks Long text without breaks Long text without breaksLong t
 # 10 Jan 2026-SM pre tag
 <pre class="wrap">
 ===============================
-6: LONG LINE TEST
+7: TEXT WRAP TEST
 ===============================
-ThisIsAnExtremelyLongLineWithoutAnySpacesToTestHorizontalScrollBehavior1234567890
+This long line should wrap automatically using white-space: pre-wrap style to test wrapping behavior.
 </pre>
