--- a/1.md
+++ b/1.md
@@ -1234,9 +1234,12 @@ Long text without breaks Long text without breaks Long text without breaksLong t
 <p>11.Invalid pre tag without closing tag</p>
 
 # 10 Jan 2026-SM pre tag
-<pre class="wrap">
+<pre>
 ===============================
-7: TEXT WRAP TEST
+9: UNICODE & EMOJI TEST
 ===============================
-This long line should wrap automatically using white-space: pre-wrap style to test wrapping behavior.
+こんにちは世界
+مرحبا بالعالم
+Привет мир
+🚀🔥✅❌🎉
 </pre>
