--- a/1.md
+++ b/1.md
@@ -1243,3 +1243,14 @@ Long text without breaks Long text without breaks Long text without breaksLong t
 Привет мир
 🚀🔥✅❌🎉
 </pre>
+<pre>
+===============================
+10: NUMBERS & ALIGNMENT TEST
+===============================
+ID    VALUE
+1     100
+20    3000
+300   45000
+Alignment preserved using spaces.
+</pre>
+
