--- a/1.md
+++ b/1.md
@@ -1253,4 +1253,13 @@ ID    VALUE
 300   45000
 Alignment preserved using spaces.
 </pre>
+<pre>
+===============================
+16: FONT STYLING TEST
+===============================
+Font: Courier New, monospace
+Font size: 14px
+Line-height: 1.5
+</pre>
+
 
