--- a/1.md
+++ b/1.md
@@ -1261,5 +1261,10 @@ Font: Courier New, monospace
 Font size: 14px
 Line-height: 1.5
 </pre>
-
+<pre class="wrap font-large">
+===============================
+STEP 8: LONG LINE WITH WRAP & LARGE FONT
+===============================
+<span class="string">"This is a very long string to test pre-wrap behavior with large font size and proper line spacing in pre tag"</span>;
+</pre>
 
