--- a/1.md
+++ b/1.md
@@ -1265,6 +1265,6 @@ Line-height: 1.5
 ===============================
 STEP 8: LONG LINE WITH WRAP & LARGE FONT
 ===============================
-<span class="string">"This is a very long string to test pre-wrap behavior with large font size and proper line spacing in pre tag"</span>;
+<span class="string">"This is a very long string to test pre-wrap behavior with large font size and proper line spacing in pre tagThis is a very long string to test pre-wrap behavior with large font size and proper line spacing in pre tagThis is a very long string to test pre-wrap behavior with large font size and proper line spacing in pre tagThis is a very long string to test pre-wrap behavior with large font size and proper line spacing in pre tagThis is a very long string to test pre-wrap behavior with large font size and proper line spacing in pre tag"</span>;
 </pre>
 
