--- a/1.md
+++ b/1.md
@@ -1267,4 +1267,7 @@ STEP 8: LONG LINE WITH WRAP & LARGE FONT
 ===============================
 <span class="string">"This is a very long string to test pre-wrap behavior with large font size and proper line spacing in pre tagThis is a very long string to test pre-wrap behavior with large font size and proper line spacing in pre tagThis is a very long string to test pre-wrap behavior with large font size and proper line spacing in pre tagThis is a very long string to test pre-wrap behavior with large font size and proper line spacing in pre tagThis is a very long string to test pre-wrap behavior with large font size and proper line spacing in pre tag"</span>;
 </pre>
+<pre>
+	Pre Test for Paragraph. Copy <inject key="AzureAdUserPassword" style="color: Red"></inject>
+</pre>
 
