--- a/1.md
+++ b/1.md
@@ -1277,3 +1277,7 @@ STEP 8: LONG LINE WITH WRAP & LARGE FONT
 }
 <span class="function">greet</span>(<span class="string">"World"</span>);
 </pre>
+<pre class="font-large">
+<span class="title">Large Font</span>
+Font size: 18px
+</pre>
