--- a/1.md
+++ b/1.md
@@ -1281,3 +1281,9 @@ STEP 8: LONG LINE WITH WRAP & LARGE FONT
 <span class="title">Large Font</span>
 Font size: 18px
 </pre>
+<pre class="font-very-large">
+<span class="title">VERY LARGE FONT TEST</span>
+This is a very large font inside a &lt;pre&gt; tag.
+Line breaks and spaces should still be preserved.
+You can test horizontal scroll or wrapping here.
+</pre>
