--- a/1.md
+++ b/1.md
@@ -1280,3 +1280,9 @@ This is a very large font inside a &lt;pre&gt; tag.
 Line breaks and spaces should still be preserved.
 You can test horizontal scroll or wrapping here.
 </pre>
+<pre style="font-family: 'Courier New', monospace; padding: 10px; background-color: #f5f5f5; border: 1px solid #ccc;">
+<span style="color: red; font-weight: bold;">Error: Something went wrong!</span>
+<span style="color: green;">Success: Operation completed.</span>
+<span style="color: blue; font-style: italic;">Info: Remember to save your work.</span>
+<span style="color: orange; font-family: 'Arial', sans-serif;">Warning: Low disk space.</span>
+</pre>
