--- a/1.md
+++ b/1.md
@@ -1286,3 +1286,11 @@ You can test horizontal scroll or wrapping here.
 <span style="color: blue; font-style: italic;">Info: Remember to save your work.</span>
 <span style="color: orange; font-family: 'Arial', sans-serif;">Warning: Low disk space.</span>
 </pre>
+<pre style="padding: 10px; background-color: #f0f0f0; border: 1px solid #ccc; font-family: monospace;">
+<span style="font-weight: bold;">This text is bold</span>
+<span style="font-style: italic;">This text is italic</span>
+<span style="text-decoration: underline;">This text is underlined</span>
+<span style="text-transform: uppercase;">This text is uppercase</span>
+<span style="letter-spacing: 2px;">This text has letter spacing</span>
+<span style="font-variant: small-caps;">This text is small-caps</span>
+</pre>
