--- a/1.md
+++ b/1.md
@@ -1279,18 +1279,19 @@ Font size: 60px
 This is a very large font inside a &lt;pre&gt; tag.
 Line breaks and spaces should still be preserved.
 You can test horizontal scroll or wrapping here.
-</pre>
-<pre style="font-family: 'Courier New', monospace; padding: 10px; background-color: #f5f5f5; border: 1px solid #ccc;">
-<span style="color: red; font-weight: bold;">Error: Something went wrong!</span>
-<span style="color: green;">Success: Operation completed.</span>
-<span style="color: blue; font-style: italic;">Info: Remember to save your work.</span>
+<pre style="font-family: 'Courier New', monospace; padding: 10px; background-color: #f5f5f5; border: 1px solid #ccc; color: #000;">
+<span style="color: red; font-weight: bold;">Error: Something went wrong!</span><br>
+<span style="color: green;">Success: Operation completed.</span><br>
+<span style="color: blue; font-style: italic;">Info: Remember to save your work.</span><br>
 <span style="color: orange; font-family: 'Arial', sans-serif;">Warning: Low disk space.</span>
 </pre>
-<pre style="padding: 10px; background-color: #f0f0f0; border: 1px solid #ccc; font-family: monospace;">
-<span style="font-weight: bold;">This text is bold</span>
-<span style="font-style: italic;">This text is italic</span>
-<span style="text-decoration: underline;">This text is underlined</span>
-<span style="text-transform: uppercase;">This text is uppercase</span>
-<span style="letter-spacing: 2px;">This text has letter spacing</span>
-<span style="font-variant: small-caps;">This text is small-caps</span>
+
+<pre style="padding:10px; background:#f5f5f5; color:#000; border:1px solid #ccc; font-family:monospace;">
+<span style="font-weight:bold;">This text is bold</span><br>
+<span style="font-style:italic;">This text is italic</span><br>
+<span style="text-decoration:underline;">This text is underlined</span><br>
+<span style="text-transform:uppercase;">This text is uppercase</span><br>
+<span style="letter-spacing:2px;">This text has letter spacing</span><br>
+<span style="font-variant:small-caps;">This text is small-caps</span>
 </pre>
+
