--- a/1.md
+++ b/1.md
@@ -1279,11 +1279,12 @@ Font size: 60px
 This is a very large font inside a &lt;pre&gt; tag.
 Line breaks and spaces should still be preserved.
 You can test horizontal scroll or wrapping here.
+
 <pre style="font-family: 'Courier New', monospace; padding: 10px; background-color: #f5f5f5; border: 1px solid #ccc; color: #000;">
-<span style="color: red; font-weight: bold;">Error: Something went wrong!</span><br>
-<span style="color: green;">Success: Operation completed.</span><br>
-<span style="color: blue; font-style: italic;">Info: Remember to save your work.</span><br>
-<span style="color: orange; font-family: 'Arial', sans-serif;">Warning: Low disk space.</span>
+<span style="display:block; color:red; font-weight:bold;">Error: Something went wrong!</span>
+<span style="display:block; color:green;">Success: Operation completed.</span>
+<span style="display:block; color:blue; font-style:italic;">Info: Remember to save your work.</span>
+<span style="display:block; color:orange; font-family:Arial, sans-serif;">Warning: Low disk space.</span>
 </pre>
 
 <pre style="padding:10px; background:#f5f5f5; color:#000; border:1px solid #ccc; font-family:monospace;">
@@ -1294,4 +1295,3 @@ You can test horizontal scroll or wrapping here.
 <span style="letter-spacing:2px;">This text has letter spacing</span><br>
 <span style="font-variant:small-caps;">This text is small-caps</span>
 </pre>
-
